# wigolo

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SKILL.md  docker-compose.yml  package-lock.json  package.json  vitest.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: binary-build.yml  ci.yml  docker-publish.yml  site.yml  (+2 more)
assets/: legacy-skill-hashes.json
docs/: POSITIONING.md  README.md  configuration.md  getting-started.md  installation.md  troubleshooting.md
mcpb/: manifest.json
packaging/: RELEASE-RUNBOOK.md  compose.serve.yml  install.sh
scripts/: daemon.mjs  gen-legacy-skill-hashes.mjs  manual_mcp_test.mjs  run-sdk-py-tests.mjs  star-chart.mjs  verify-channel-binary.sh  verify-channel-brew.sh  verify-channel-docker.sh  verify-channel-npm.sh  verify-channel-rest.sh  verify-channel-sh.sh  verify-sdks.sh
sdks/python/: .gitignore  README.md  conftest.py  pyproject.toml
sdks/python/src/wigolo/: __init__.py  _aio.py  _client.py  _errors.py  _local.py  _manifest.py
sdks/python/tests/: _fake_serve.py  conftest.py  test_integration.py  test_integration_local.py  test_package_build.py  test_runtime_drift.py  test_unit_async.py  test_unit_env_and_surface.py  test_unit_local.py  test_unit_transport.py
site/: README.md  docs-progress.md  next.config.ts  package-lock.json  package.json
src/: config.ts  index.ts  instructions.ts  logger.ts  onnxruntime-node.d.ts  persisted-config.ts  python-env.ts  server.ts  types.ts
tests/: setup.ts
(+818 files in other folders)
